tests/src/frontend/typechecking/invalid/construct_base.sk
base class MyBase

fun foo(): MyBase {
  MyBase()
}
